--- a/coc-settings.json
+++ b/coc-settings.json
@@ -8,6 +8,25 @@
     "kotlin": {
       "command": "C:\\Users\\Willians\\AppData\\Local\\nvim-data\\lsp\\kotlin\\server\\bin\\kotlin-language-server.bat",
       "filetypes": ["kotlin"]
+    },
+    "ccls": {
+      "command": "ccls",
+      "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
+      "rootPatterns": [".ccls", "compile_commands.json"],
+      "initializationOptions": {
+        "cache": {
+          "directory": "/tmp/ccls"
+        },
+        "client": {
+          "snippetSupport": true
+        },
+        "index": {
+          "onChange": true
+
+        },
+        // This is mandatory!
+        "highlight": { "lsRanges" : true  }
+      }
     }
   },
   "explorer.width": 30,
